# fitness-calculator-tool

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  api_rest.py  app.py  confluence.txt  docker-compose.yml  docu.md  macro_calculator.py  main.py  pyproject.toml  requirements.txt  script1  script1.py  script2  script2.py  script3  script3.py  tailwind.config.js
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  copilot-setup-steps.yml
fitness_tools/: __init__.py  body_composition.py  nutrition.py
fitness_tools.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
templates/: activity_calculator.html  index.html
tests/: test_fitness_tools.py
