[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fitness_tools"
version = "0.1.0"
description = "Herramientas de composición corporal y nutrición deportiva"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["."]
include = ["fitness_tools*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
